<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mygames.MyGamesEmpty">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="224dp"
        android:scaleType="centerCrop"
        android:src="@drawable/nogamegif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNoGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/no_game"
        android:textColor="#120D26"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <TextView
        android:id="@+id/textViewNoGameDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:lineSpacingExtra="3sp"
        android:text="@string/no_game_desc"
        android:textAlignment="center"
        android:textColor="#747688"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoGame" />

    <Button
        android:id="@+id/btn_explore_games"
        android:layout_width="270dp"
        android:layout_height="58dp"
        android:layout_marginTop="532dp"
        android:background="@drawable/btn_back"
        android:drawableEnd="@drawable/arrow_circle_right"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text="@string/explore_games"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>