
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.createevent.CreateEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/createEventText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="28dp"
            android:text="@string/create_event"
            android:textColor="#120D26"
            android:textSize="29sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayoutEventName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEventName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="38dp"
            android:hint="@string/event_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/createEventText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textColor="#747688"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="38dp"
            android:hint="@string/location"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textColor="#747688"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBoardGame"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTimePicker">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewBoardGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:layout_weight="1"
                android:hint="@string/select_a_board_game"
                android:fontFamily="@font/nunito_sans"
                android:textColor="#747688"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="38dp"
            app:cardCornerRadius="4dp"
            app:strokeColor="#59000000"
            app:strokeWidth="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutLocation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTimesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:fontFamily="@font/nunito_sans"
                    android:textColor="#747688"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:id="@+id/linearLayoutAddTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/calendar_add_24"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_a_date_and_time"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutShowTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_weight="1"
                        android:src="@drawable/calendar_month_24"
                        app:tint="@color/primary_blue"
                        android:layout_marginEnd="8dp"/>
                    <TextView
                        android:id="@+id/textViewShowTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:text="12:00"
                        android:textSize="16sp" />
                    <ImageView
                        android:id="@+id/removeTime"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_weight="1"
                        android:src="@drawable/delete_24"
                        app:tint="@color/accent_red"
                        android:layout_gravity="end"/>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="38dp"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutBoardGame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:fontFamily="@font/nunito_sans"
                android:textColor="#747688"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_create_event"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_back"
            android:drawableEnd="@drawable/arrow_circle_right"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/create_event"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
