<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addfavgame.AddFavGameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="31dp"
            android:layout_marginHorizontal="40dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/titleGame"
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/nunito"
                        android:maxLines="2"
                        android:text="@string/board_game_title"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgStarFav"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/star_fill24"
                        android:visibility="invisible"
                        app:tint="@color/accent_yellow"/>
                </LinearLayout>


                <ImageView
                    android:id="@+id/ImgGame"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearLayoutSpecifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="50dp"
                >
                <TextView
                    android:id="@+id/txtPlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Players:"
                    android:textColor="@color/background_black"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="3dp"/>

                <TextView
                    android:id="@+id/gamePlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:textSize="16sp"
                    android:layout_marginStart="6dp"
                    android:text="3-4" />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category:"
                    android:paddingStart="20dp"
                    android:textColor="@color/background_black"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="3dp"/>

                <TextView
                    android:id="@+id/gameCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:textSize="16sp"
                    android:layout_marginStart="6dp"
                    android:text="Strategy" />

            </LinearLayout>

            <TextView
                android:id="@+id/gameDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                android:textAlignment="inherit"
                android:text="Long Long Description" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxAddFavGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_blue"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/add_to_my_library"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                />

            <Button
                android:id="@+id/btn_add_fav_game"
                android:layout_width="270dp"
                android:layout_height="58dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_back"
                android:drawableEnd="@drawable/arrow_circle_right"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/submit"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>